# qasports-dataset-scripts

./: .pre-commit-config.yaml  CITATION.bib  CONTRIBUTING.md  LICENSE  README.md  dataset_analysis_display.py  dataset_analysis_results.py  doc_reader.sh  doc_reader_results.py  doc_retriever.sh  doc_retriever_results.py  extracting.out  fetching.out  gathering.out  huggingface.out  labeling_llm-llama.out  labeling_llm-mistral.out  labeling_llm-qwen.out  llm_results.py  processing.out  pyproject.toml  question_answer.out  requirements.txt  sampling.out
.github/workflows/: continuous-integration.yml  crawler-workflow.yml  gathering-workflow.yml
Crawlers/: CrawlerFunc.py  CrawlerRun.py  PageCrawlerBask.py  PageCrawlerFoot.py  PageCrawlerSoc.py
ExtractingContexts/: ContextFunc.py  ContextRun.py  ContextsBask.py  ContextsFoot.py  ContextsSoc.py
Fetching/: FetchBask.py  FetchFoot.py  FetchFunc.py  FetchRun.py  FetchSoc.py
Output/: .gitignore
Processing/: ProcBask.py  ProcFoot.py  ProcFunc.py  ProcRun.py  ProcSoc.py
QuestionAnswer/: QAFunc.py
experiments/: dataset_analysis.py  doc_reader.py  doc_retriever.py  module.py  pyproject.toml
output/: .gitignore  americanfootball-links.csv  badminton-links.csv  baseball-links.csv  basketball-links.csv  boxing-links.csv  cricket-links.csv  cycling-links.csv  f1-links.csv  fitness-links.csv  football-links.csv  golf-links.csv  gymnastics-links.csv  handball-links.csv  hockey-links.csv  horse_racing-links.csv  martialarts-links.csv  mixedmartialarts-links.csv  rugby-links.csv  rugbyunion-links.csv  skiing-links.csv
output/analysis_results/: all_train_analysis.json  americanfootball_train_analysis.json  analysis_summary_train.json  badminton_train_analysis.json  baseball_train_analysis.json  basketball_train_analysis.json  boxing_train_analysis.json  cricket_train_analysis.json  cycling_train_analysis.json  f1_train_analysis.json  (+12 more)
src/: module.py
(+516 files in other folders)
