[project]
name = "experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets==2.4.0",
    "evaluate==0.4.5",
    "farm-haystack==1.26.2",
    "mmh3==4.1.0",
    "sentence-transformers==2.2.2",
    "setuptools>=80.9.0",
    "transformers==4.39.3",
]
